<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <include layout="@layout/title_menu" />

    <RadioGroup
        android:id="@+id/radio_group_race"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@color/gold"
        android:gravity="center"
        android:orientation="horizontal" >

        <RadioButton
            android:id="@+id/race_radio0"
            style="@style/rank_radoibuttom"
            android:background="@drawable/rank_radio_left"
            android:checked="true"
            android:tag="radio_button0"
            android:text="@string/textview_race0" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="40.0dip"
            android:contentDescription="@string/image_content_description"
            android:src="@drawable/rank_radio_centerview" />

        <RadioButton
            android:id="@+id/race_radio1"
            style="@style/rank_radoibuttom"
            android:background="@drawable/rank_radio_center"
            android:tag="radio_button1"
            android:text="@string/textivew_race1" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="40.0dip"
            android:contentDescription="@string/image_content_description"
            android:src="@drawable/rank_radio_centerview" />

        <RadioButton
            android:id="@+id/race_radio2"
            style="@style/rank_radoibuttom"
            android:background="@drawable/rank_radio_right"
            android:tag="radio_button2"
            android:text="@string/textview_race2" />
    </RadioGroup>

    <android.support.v4.view.ViewPager
        android:id="@+id/race_listcount"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_gravity="center"
        android:background="@color/transparent"
        android:flipInterval="30"
        android:persistentDrawingCache="animation" />

</LinearLayout>