<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/racecontent_linrea_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/bgcolor"
        android:orientation="horizontal" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_weight="0"
            android:gravity="center" >

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_gravity="center"
                android:layout_marginLeft="16dip" >

                <ImageView
                    android:id="@+id/imageview_raceitem"
                    android:layout_width="110dp"
                    android:layout_height="wrap_content"
                    android:src="@drawable/imageview_activitydetails_first" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center_vertical"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/textview_activitydetails_textrankname"
                        style="@style/activitydetails_list1_textrank"
                        android:text="@string/textview_ranknow" />

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:orientation="horizontal" >

                        <TextView
                            android:id="@+id/textview_activitydetails_list1_rankid"
                            style="@style/activitydetails_list1_ranknum"
                            android:text="@string/text_zeronum" />

                        <TextView style="@style/activitydetails_list1_rankname" />
                    </LinearLayout>
                </LinearLayout>
            </FrameLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ad_ll_infos1"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="3"
            android:gravity="center_vertical"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dip"
                android:gravity="center_vertical"
                android:orientation="horizontal" >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/imageview_activitydetails_avg" />

                <TextView
                    android:id="@+id/race_listtop_text"
                    style="@style/activitydetails_list1_title"
                    android:text="@string/textview_avgJiang" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dip"
                android:gravity="bottom"
                android:orientation="horizontal" >

                <TextView
                    style="@style/activitydetails_list1_text_stepname"
                    android:text="@string/textview_rangeStep" />

                <TextView
                    android:id="@+id/textview_activitydetails_list1_stepnum"
                    style="@style/activitydetails_textview_list1_stepnum"
                    android:textSize="@dimen/racecontent_item_runstep_text"
                    android:text="@string/text_zeronum" />

                <TextView
                    android:id="@+id/TextView_activity_textstep"
                    style="@style/text_list1_step"
                    android:text="@string/textview_racestep" />

                <TextView
                    android:id="@+id/textview_activity_ruwei1"
                    style="@style/text_list1_step"
                    android:text="已入围"
                    android:visibility="gone" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dip" >

                <TextView
                    android:id="@+id/textview_activitydetails_kickoffname1"
                    style="@style/activitydetails_list1_text_stepname"
                    android:layout_gravity="top"
                    android:text="@string/textview_jibai" />

                <TextView
                    android:id="@+id/textview_activitydetails_list1_jibai"
                    style="@style/text_list1_step"
                    android:gravity="bottom"
                    android:text="@string/text_zeronum" />

                <TextView
                    android:id="@+id/textview_activitydetails_kickoffunit1"
                    style="@style/activitydetails_list1_text_stepname"
                    android:layout_gravity="center"
                    android:text="@string/textview_de_people" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dip"
                android:gravity="right" >

                <ImageView
                    android:id="@+id/ad_iv_infos1"
                    style="@style/activitydetails_list2_image_icon" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>