<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/sample_background"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <include
            android:id="@+id/item_header"
            android:layout_height="wrap_content"
            layout="@layout/title_menu" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="35dp"
        android:background="@color/gold"
        android:orientation="horizontal" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerInParent="true"
            tools:ignore="UseCompoundDrawables" >

            <ImageView
                android:id="@+id/imageButton1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dip"
                android:contentDescription="@string/image_content_description"
                android:src="@drawable/his_titlebar_jiao" />

            <TextView
                android:id="@+id/history_title_step"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="5dip"
                android:text="@string/stepnum"
                android:textColor="#6d4627"
                android:textSize="15sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            tools:ignore="UseCompoundDrawables" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/image_content_description"
                android:src="@drawable/his_titlebar_huo" />

            <TextView
                android:id="@+id/history_title_hot"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="5dip"
                android:text="@string/history_hot"
                android:textColor="#6d4627"
                android:textSize="15sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            tools:ignore="UseCompoundDrawables" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/image_content_description"
                android:src="@drawable/his_titlebar_time" />

            <TextView
                android:id="@+id/bp_item_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="5dip"
                android:layout_marginRight="16dip"
                android:text="@string/history_uploadtime"
                android:textColor="#6d4627"
                android:textSize="15sp" />
        </LinearLayout>

        <ImageButton
            android:layout_width="29dp"
            android:layout_height="31dp"
            android:layout_marginLeft="1dp"
            android:background="@null"
            android:contentDescription="@string/image_content_description"
            android:src="@drawable/his_list_111"
            android:visibility="gone" />
    </RelativeLayout>

    <cmcc.mhealth.view.XListView
        android:id="@+id/list_sports_history_input"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:cacheColorHint="#00000000"
        android:divider="@null"
        android:fastScrollEnabled="true"
        android:listSelector="#00000000" >
    </cmcc.mhealth.view.XListView>

</LinearLayout>